# ChangeLog for www-apps/froxlor
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
  call epatch_user, fixes #65

*froxlor-0.9.3 (14 Mar 2010)

  14 Mar 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.2.1.ebuild, +froxlor-0.9.3.ebuild:
  version bump, remove old

  02 Mar 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.2.1.ebuild, froxlor-9999.ebuild:
  fixup installation from $FILESDIR just copy its contents to /usr/share to
  make pkg_config(); install its files

*froxlor-0.9.2.1 (02 Mar 2010)

  02 Mar 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.2.ebuild, +froxlor-0.9.2.1.ebuild:
  version bump, remove old

*froxlor-0.9.2 (01 Mar 2010)

  01 Mar 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.1.ebuild, +froxlor-0.9.2.ebuild:
  version bump, remove old

  23 Feb 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.1.ebuild, froxlor-9999.ebuild:
  block the syscp package and tell people what to do when they upgrade

  22 Feb 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.1.ebuild, froxlor-9999.ebuild:
  do not block a dovecot 1.2 upgrade due to usedeps

  21 Feb 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-0.9.1.ebuild, froxlor-9999.ebuild, metadata.xml:
  add realtime useflag (no configuration yet, just ensure we have the right
  php useflag to even make it work)

*froxlor-0.9.1 (15 Feb 2010)

  15 Feb 2010; Froxlor Release Team <release@froxlor.org>
  -froxlor-0.9.ebuild, +froxlor-0.9.1.ebuild:
  version bump, remove old

*froxlor-0.9 (01 Feb 2010)

  01 Feb 2010; Froxlor Release Team <release@froxlor.org>
  +froxlor-0.9.ebuild, froxlor-9999.ebuild:
  version bump, small cleanup

  30 Jan 2010; Froxlor Release Team <release@froxlor.org>
  froxlor-9999.ebuild:
  pkg_preinst -> pkg_setup
