@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Mar 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
+  add note for cron changes and fix messed up quoting
+
   16 Mar 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-0.9.3.ebuild, froxlor-9999.ebuild:
   call epatch_user, fixes #65
